--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@trpc/server": "next",
     "@vercel/postgres": "^0.8.0",
     "drizzle-orm": "^0.29.4",
+    "drizzle-zod": "^0.5.1",
     "geist": "^1.3.0",
     "next": "^14.2.1",
     "next-auth": "^4.24.6",
