--- a/package.json
+++ b/package.json
@@ -13,15 +13,19 @@
   },
   "dependencies": {
     "@auth/drizzle-adapter": "^0.7.0",
+    "@radix-ui/react-icons": "^1.3.0",
     "@t3-oss/env-nextjs": "^0.10.1",
     "@tanstack/react-query": "^5.25.0",
     "@trpc/client": "next",
     "@trpc/react-query": "next",
     "@trpc/server": "next",
     "@vercel/postgres": "^0.8.0",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.1",
     "drizzle-orm": "^0.29.4",
     "drizzle-zod": "^0.5.1",
     "geist": "^1.3.0",
+    "lucide-react": "^0.452.0",
     "next": "^14.2.1",
     "next-auth": "^4.24.6",
     "postgres": "^3.4.3",
@@ -29,6 +33,8 @@
     "react-dom": "18.2.0",
     "server-only": "^0.0.1",
     "superjson": "^2.2.1",
+    "tailwind-merge": "^2.5.3",
+    "tailwindcss-animate": "^1.0.7",
     "zod": "^3.23.3"
   },
   "devDependencies": {
